# 2dgameengine

./: CMakeLists.txt  Makefile  compile_commands.json  gameengine  log  vcpkg.json
.ccls-cache/@@home@scumworth@projects@2dgameengine/: @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@__stddef_max_align_t.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@__wmmintrin_aes.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@__wmmintrin_pclmul.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@adxintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx2intrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512bitalgintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512bwintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512cdintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512dqintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512erintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512fintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512ifmaintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512ifmavlintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512pfintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512vbmi2intrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512vbmiintrin.h.blob  @snap@ccls@85@usr@lib@llvm-7@lib@clang@7.0.0@include@avx512vlintrin.h.blob  (+311 more)
src/: Main  Main.cpp  config.el  init.el  packages.el
(+151 files in other folders)
